Server: Enhance API documentation and security configuration, add Netty DNS resolver for MacOS, and improve WebClient error handling